# CastleBeard

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Base Assets/: SimpleCube.fbx  SphereFlat.fbx
Base Assets/Shaders/: fragment.glsl  vertex.glsl
Base Assets/Shaders/Wireframe/: fragment.glsl  geometry.glsl  vertex.glsl
Include/: CBEvent.h  CBMath.h  Debug.h  Defines.h  Defines.h.in  Engine.h  PhysicsEnvironment.h  Renderer.h  Window.h
Include/Core/: Event.h  EventManager.h  EventQueue.h  PrefFile.h  StringParser.h  System.h  TextFile.h
Include/Core/Events/: ComponentEvents.h  EngineEvents.h  EntityEvents.h  InputEvents.h  WindowEvents.h
Include/Graphics/: Camera.h  Environment.h  Importer.h  Material.h  Mesh.h  MeshData.h  Model.h  Renderer.h  RendererNode.h  Scene.h  Shader.h  System.h  Vertex.h
Include/Graphics/Environment/: Camera.h  EnvironmentNode.h  Material.h  MeshData.h  Model.h  Shader.h  Vertex.h
Include/Math/: AngleAxis.h  Math.h  Matrix.h  Quaternion.h  Transform.h  Vector.h
Include/Physics/: PhysicsEnvironment.h  System.h
Include/Physics/Environment/: RigidBody.h
Include/PlayerController/: System.h
Include/Window/: WindowManager.h
Libraries/glad/include/glad/: glad.h
Libraries/glad/src/: glad.c
Old Reference Code/: CubeMap.cpp  CubeMap.h  FrameBuffer.cpp  FrameBuffer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Object.cpp  Object.h  Resources.cpp  Resources.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  Window.cpp  Window.h  main.cpp
Source/: Matrix.cpp  Quaternion.cpp  Vector.cpp  main.cpp
Source/Core/: Event.cpp  EventManager.cpp  EventQueue.cpp  PrefFile.cpp  StringParser.cpp  TextFile.cpp
Source/Core/Events/: ComponentEvents.cpp  EngineEvents.cpp  EntityEvents.cpp  InputEvents.cpp  WindowEvents.cpp
Source/Engine/: GraphicsSystem.cpp  GraphicsSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  PlayerControllerSystem.cpp  PlayerControllerSystem.h  System.h
Source/Engine/Events/: ComponentEvents.h  EngineEvents.h  EntityEvents.h  Event.h  EventManager.cpp  EventManager.h  EventQueue.cpp  EventQueue.h  InputEvents.cpp  InputEvents.h  WindowEvents.cpp  WindowEvents.h
Source/Engine/Graphics/: GraphicsEvents.h  GraphicsSystem.cpp  GraphicsSystem.h
Source/Engine/Physics/: PhysicsEvents.h  PhysicsSystem.cpp  PhysicsSystem.h
Source/Engine/PlayerController/: PlayerControllerEvents.h  PlayerControllerSystem.cpp  PlayerControllerSystem.h
Source/Graphics/: Camera.cpp  Environment.cpp  Importer.cpp  Material.cpp  Mesh.cpp  MeshData.cpp  Model.cpp  Renderer.cpp  RendererNode.cpp  Scene.cpp  Shader.cpp  System.cpp  Vertex.cpp
Source/Graphics/Environment/: Camera.cpp  EnvironmentNode.cpp  Importer.cpp  Material.cpp  Mesh.cpp  MeshData.cpp  Model.cpp  Shader.cpp  Vertex.cpp
Source/Math/: AngleAxis.cpp  AngleAxis.h  Math.cpp  Math.h  Matrix.cpp  Matrix.h  Quaternion.cpp  Quaternion.h  Transform.cpp  Vector.cpp  Vector.h
Source/Physics/: PhysicsEnvironment.cpp  System.cpp  System.h
Source/Physics/Environment/: Rigidbody.cpp
Source/PhysicsEnvironment/: PhysicsEnvironment.h  RigidBody.h  Rigidbody.cpp
Source/PlayerController/: System.cpp
Source/Renderer/: Camera.cpp  Camera.h  Importer.cpp  Importer.h  Material.h  Mesh.cpp  Mesh.h  MeshData.cpp  MeshData.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  RendererNode.cpp  RendererNode.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Vertex.cpp  Vertex.h
Source/Util/: PrefFile.cpp  PrefFile.h  StringParser.cpp  StringParser.h  TextFile.cpp  TextFile.h
Source/Window/: WindowManager.cpp  WindowManager.h
